# mini_harness

./: .gitignore  CMakeLists.txt  README.md  intent.md  main.cpp  remote_window.c  run.bash
examples/: remote_engine.c
include/: harness_engine.h
src/: harness_engine.cpp  main.cpp
